--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,12 +1,15 @@
 .nav{
     height: 80px;
     background-color:lightgray;
-    text-align: center;
+      display: flex;
+     align-items: center;
+     justify-content: center;
 }
 .tittleName{
     color: rgb(81, 196, 235);
-     text-align: center;
+    
      margin-top: 0;
+  
 
 }
 .colorName{
