bootstrap card added

--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,3 +1,7 @@
-/* .product img{
-    width: 286px;
-} */
+.single_card{
+    position: relative;
+}
+.card-footer button{
+    position: absolute;
+    bottom: 0;
+}
